--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,53 @@
   @tailwind components;
   @tailwind utilities;
 
+
+  /* Editor Styles */
+
+  ul, 
+  ol {
+    padding: 0 1rem;
+    margin: 1.25rem 1rem 1.25rem 0.4rem;
+  }
+
+  li p {
+      margin-top: 7px;
+      margin-bottom: 0.25em;
+  }
+
+  ul{
+    list-style: disc;
+  }
+  ol{
+    list-style: decimal;
+  }
+
+  h1{
+    font-size: 25px;
+    font-weight: bold;
+  }
+  
+  h2{
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+
+  a{
+    color: #091773;
+    text-decoration: underline;
+  }
+
+  p{
+    font-size: 13px;
+  }
+
+  
+
+  /* End of Editor Styles */
+
+
+
   @layer base {
     :root {
       --background: 0 0% 100%;
